fix: connection string redis

--- a/Back.Redis.Api/appsettings.Development.json
+++ b/Back.Redis.Api/appsettings.Development.json
@@ -10,7 +10,7 @@
       "Url": "https://pokeapi.co"
     }
   },
-  "Redis": {
-    "Host": "redis-15270.c12.us-east-1-4.ec2.redns.redis-cloud.com:15270,user=default,password=Gl5mGZNugECxXXtibdqsRH9gE26eNKmz"
+  "ConnectionStrings": {
+    "Redis": "redis-15270.c12.us-east-1-4.ec2.redns.redis-cloud.com:15270,user=default,password=Gl5mGZNugECxXXtibdqsRH9gE26eNKmz"
   }
 }
